[workspace]
members = ["actor", "channel"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.80"
log = "0.4.20"
thiserror = "2.0.17"
futures-channel = "0.3"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
service-channel = { path = "./channel" }
tokio = { version = "1.37.0", features = [
    "rt",
    "sync",
    "macros",
    "rt-multi-thread",
] }
