[package]
name = "serviceless-actor"
version = "0.1.3"
edition = "2021"
description = "An simple actor model in rust, like actix"
license = "MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
async-trait = { workspace = true }
service-channel = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
