[package]
name = "serviceless"
version = "0.1.3"
edition = "2021"
description = "An simple actor model in rust, like actix"
license = "MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
service-channel = { path = "../channel" }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
