[package]
name = "serviceless-jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
serde_json = "1.0.106"

serde.workspace = true
log.workspace = true
thiserror.workspace = true

hyper = { version = "0.14.27", features = ["client", "http1", "http2", "tcp"] }
http = "0.2.9"
time = "0.3.28"
