[package]
name = "serviceless-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
log.workspace = true
thiserror.workspace = true

serviceless-core.workspace = true

tokio = { version = "1.32.0", features = ["sync", "rt"] }
